[package]
name = "trello"
version = "0.1.7"
authors = ["Florin Lipan <florinlipan@gmail.com>"]
license = "MIT"
repository = "https://github.com/lipanski/trello-rs"
description = "A Trello client for Rust. This is a work in progress!"

[dependencies]
hyper = "0.7.0"
rustc-serialize = "0.3.16"

[dependencies.mockito]
version = "0.1.4"
features = ["use_hyper"]

[dev-dependencies.mockito]
version = "0.1.4"
features = ["mock_hyper"]
